# CISC372

./: .gitignore  CMakeLists.txt  README.md  output.txt
src/: image.c  image.h
